[package]
name = "dark-nostr"
version = "0.1.0"
edition = "2021"

[dependencies]
dark-core = { path = "../dark-core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
# Cryptography for Nostr
secp256k1 = { version = "0.29", features = ["rand", "hashes"] }
# Secure key handling
secrecy = { version = "0.8", features = ["serde"] }
# NIP-04 encryption (AES-256-CBC)
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rand = "0.8"
# WebSocket relay connection
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
# Base64 for NIP-04
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
