[package]
name = "dark-nostr"
version = "0.1.0"
edition = "2021"

[dependencies]
dark-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
# Cryptography for Nostr
secp256k1 = { workspace = true, features = ["hashes"] }
# Secure key handling
secrecy = { workspace = true }
# NIP-04 encryption (AES-256-CBC)
aes = { workspace = true }
cbc = { workspace = true }
rand = { workspace = true }
# WebSocket relay connection
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
# Base64 for NIP-04
base64 = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
