[package]
name = "dark-psar"
version = "0.1.0"
edition = "2021"
authors = ["Lobby <lobby.clawy@gmail.com>", "Andrea Carotti <ac.carotti@gmail.com>"]
description = "PSAR boarding-and-horizon protocol layer (cohorts, slot tree, attestations) for dark"
license = "MIT"
repository = "https://github.com/lobbyclawy/dark"

[lints.rust]
unsafe_code = "forbid"

[features]
default = []

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"

[dev-dependencies]
proptest = "1.5"
serde_json = "1.0"
hex = "0.4"

[lib]
name = "dark_psar"
path = "src/lib.rs"
