[package]
name = "dark-psar"
version = "0.1.0"
edition = "2021"
authors = ["Lobby <lobby.clawy@gmail.com>", "Andrea Carotti <ac.carotti@gmail.com>"]
description = "PSAR boarding-and-horizon protocol layer (cohorts, slot tree, attestations) for dark"
license = "MIT"
repository = "https://github.com/lobbyclawy/dark"

[lints.rust]
unsafe_code = "forbid"

[features]
default = []
# Enables `publish::publish_slot_attest` and the
# `tests/e2e_psar_regtest.rs` integration test. The default build does
# not pull in the Bitcoin / RPC dependency stack.
regtest = ["dep:bitcoin", "dep:bitcoincore-rpc"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
secp256k1 = { version = "0.29", features = ["rand"] }
rand = "0.8"
dark-von = { path = "../dark-von" }
dark-von-musig2 = { path = "../dark-von-musig2" }
dark-core = { path = "../dark-core" }
bitcoin = { version = "0.32", optional = true, features = ["rand", "serde"] }
bitcoincore-rpc = { version = "0.19", optional = true }

[dev-dependencies]
proptest = "1.5"
serde_json = "1.0"
hex = "0.4"

[lib]
name = "dark_psar"
path = "src/lib.rs"
