[package]
name = "dark-psar"
version = "0.1.0"
edition = "2021"
authors = ["Lobby <lobby.clawy@gmail.com>", "Andrea Carotti <ac.carotti@gmail.com>"]
description = "PSAR boarding-and-horizon protocol layer (cohorts, slot tree, attestations) for dark"
license = "MIT"
repository = "https://github.com/lobbyclawy/dark"

[lints.rust]
unsafe_code = "forbid"

[features]
default = []
# Enables `publish::publish_slot_attest` and the
# `tests/e2e_psar_regtest.rs` integration test. The default build does
# not pull in the Bitcoin / RPC dependency stack.
regtest = ["dep:bitcoin", "dep:bitcoincore-rpc"]
# Enables the `psar-demo` binary (issue #680). Pulls in clap and
# tracing-subscriber; the library itself (and the AspMode adapter
# in #678) remain free of CLI / log-formatter deps.
demo = ["dep:clap", "dep:tracing-subscriber"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10"
secp256k1 = { version = "0.29", features = ["rand"] }
rand = "0.8"
hex = "0.4"
tracing = "0.1"
dark-von = { path = "../dark-von" }
dark-von-musig2 = { path = "../dark-von-musig2" }
dark-core = { path = "../dark-core" }
bitcoin = { version = "0.32", optional = true, features = ["rand", "serde"] }
bitcoincore-rpc = { version = "0.19", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

[dev-dependencies]
proptest = "1.5"

[lib]
name = "dark_psar"
path = "src/lib.rs"

[[bin]]
name = "psar-demo"
path = "src/bin/psar-demo.rs"
required-features = ["demo"]
