[package]
name = "dark-scanner"
version = "0.1.0"
edition = "2021"
description = "Blockchain scanner implementations for on-chain VTXO watching"
license = "MIT"

[dependencies]
dark-core = { path = "../dark-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2.0"
hex = "0.4"
bitcoin = { version = "0.32" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockito = "1"
