[package]
name = "dark-scanner"
version = "0.1.0"
edition = "2021"
description = "Blockchain scanner implementations for on-chain VTXO watching"
license = "MIT"

[dependencies]
dark-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
mockito = { workspace = true }

[lints]
workspace = true
