[package]
name = "dark-scheduler"
version = "0.1.0"
edition = "2021"
description = "Time-based and block-height-based schedulers for dark round triggers"
license = "MIT"

[dependencies]
dark-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
