[package]
name = "dark-signer"
version = "0.1.0"
edition = "2021"
description = "Standalone signer binary for dark — key isolation via gRPC SignerService"
license = "MIT"

[[bin]]
name = "dark-signer"
path = "src/main.rs"

[dependencies]
# gRPC
tonic = { workspace = true, features = ["tls"] }
prost = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Bitcoin / crypto
bitcoin = { workspace = true, features = ["rand"] }
secp256k1 = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
hex = { workspace = true }

# Internal — reuse generated proto types from dark-api
dark-api = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[lints]
workspace = true
