[package]
name = "dark-signer"
version = "0.2.0"
edition = "2021"
description = "Standalone signer binary for dark — key isolation via gRPC SignerService"
license = "MIT"

[[bin]]
name = "dark-signer"
path = "src/main.rs"

[dependencies]
# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Bitcoin / crypto
bitcoin = { version = "0.32", features = ["rand", "serde"] }
secp256k1 = { version = "0.29", features = ["rand"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
hex = "0.4"

# Internal — reuse generated proto types from dark-api
dark-api = { path = "../dark-api" }

[build-dependencies]
tonic-build = "0.12"
