[package]
name = "dark-von-musig2"
version = "0.1.0"
edition = "2021"
authors = ["Lobby <lobby.clawy@gmail.com>", "Andrea Carotti <ac.carotti@gmail.com>"]
description = "VON-augmented MuSig2 (BIP-327) for PSAR on dark"
license = "MIT"
repository = "https://github.com/lobbyclawy/dark"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
thiserror = "2.0"
secp256k1 = { version = "0.29", features = ["rand"] }
sha2 = "0.10"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
dark-von = { path = "../dark-von" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
ciborium = "0.2"
rand = "0.8"

[dev-dependencies]
musig2 = "0.3.1"
hex = "0.4"
bitcoin = { version = "0.32", features = ["rand"] }

[lib]
name = "dark_von_musig2"
path = "src/lib.rs"
