[package]
name = "dark-wallet-bin"
version = "0.1.0"
edition = "2021"
description = "Standalone gRPC wallet binary for dark with AES-256 seed encryption"
license = "MIT"

[[bin]]
name = "dark-wallet-bin"
path = "src/main.rs"

[dependencies]
# gRPC
tonic = { workspace = true, features = ["transport"] }
prost = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }

# CLI
clap = { workspace = true }

# Encryption (AES-256-GCM for seed at rest)
aes-gcm = { workspace = true }
pbkdf2 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

# Bitcoin
bitcoin = { workspace = true, features = ["rand"] }
bdk_wallet = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Hex encoding
hex = { workspace = true }

# Internal crates
dark-wallet = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[lints]
workspace = true
