[package]
name = "dark-wallet"
version = "0.1.0"
edition = "2021"
description = "Bitcoin wallet service for dark (BDK-based)"
license = "MIT"

[dependencies]
# Bitcoin Development Kit (BDK 1.0+)
# NOTE: Using 1.2 series with matching chain/file_store versions
bdk_wallet = { workspace = true, features = ["file_store"] }
bdk_esplora = { workspace = true }

# Bitcoin core primitives
bitcoin = { workspace = true, features = ["rand"] }
secp256k1 = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "process"] }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Encoding
base64 = { workspace = true }
hex = { workspace = true }

# HTTP client (for package broadcast)
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
chrono = { workspace = true }

# Internal crates
dark-core = { workspace = true }
dark-bitcoin = { workspace = true }


[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
